buttons group fixes | table and notices overflow fixes

--- a/web/app/themes/wpadminref/assets/styles/main.css
+++ b/web/app/themes/wpadminref/assets/styles/main.css
@@ -77,7 +77,7 @@
 
 .buttons-row {
 	display: grid;
-	grid-template-columns: calc(13% - 10px) calc(20.33% - 10px) calc(66.66% - 10px);
+	grid-template-columns: calc(13% - 10px) calc(26.33% - 10px) calc(60.66% - 10px);
 	grid-template-rows: 1fr;
 	grid-gap: 20px;
 	margin-bottom: 40px;
@@ -441,6 +441,13 @@ a.twitter-share-button.small {
 	color: #fff;
 }
 
+@media (max-width: 1440px) {
+
+	.grid-2 {
+		grid-template-columns: calc(50% - 10px) calc(50% - 10px);
+	}
+}
+
 @media (max-width: 1199px) {
 
 	.wrap h1.big-title {
@@ -464,9 +471,10 @@ a.twitter-share-button.small {
 	.wrap div.error,
 	.media-upload-form .notice,
 	.media-upload-form div.error {
-		margin: 1rem 0 1rem 0;
-		height: auto;
 		display: block;
+		width: auto;
+		height: auto;
+		margin: 1rem 0 1rem 0;
 	}
 
 	.notices-markup-column pre {
